# aoc2023

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  day01.h  day02.h  day03.h  day04.h  day05.h  day06.h  day07.h  day07b.h  day08.h  day09.h  day10.h  main.cpp  utils.h
src/day10/: day10b.cpp  part01
